retrieveNA31/objects/Core_IPS_Case_Interested_Party__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <formula>User__r.FirstName +  User__r.LastName</formula>
        <label>Agent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Interested Parties</relationshipLabel>
        <relationshipName>Interested_Parties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Interested Parties</relationshipLabel>
        <relationshipName>Interested_Parties1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_IPS_Account_Name__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)),Contact__r.FirstName,User__r.FirstName)</formula>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__c)),Contact__r.LastName,User__r.LastName)</formula>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of Interested Party</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Interested_Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Interested Party</label>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Interested Party Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interested Parties</pluralLabel>
    <recordTypes>
        <fullName>Cutomer</fullName>
        <active>true</active>
        <label>Cutomer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal</fullName>
        <active>true</active>
        <label>Internal</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>IF_User_is_Blank_when_Contact_is_associa</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISNULL(Contact__c)), ISNULL(User__c))</errorConditionFormula>
        <errorMessage>User should not be blank when Contact is Selected</errorMessage>
    </validationRules>
</CustomObject>